<resources>
    <string name="app_name">Weather Application</string>
    <string name="home">Home</string>
    <string name="manage_location">Manage Location</string>
    <string name="settings">Settings</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="loading">loading</string>
    <string name="last_update_july_31_11_00_am">Last Update JULY 31 11:00 AM</string>
    <string name="bengalore">Bengalore</string>
    <string name="_10_24_am">10:24 AM</string>
    <string name="_31_32_c">31/32 C</string>
    <string name="google_places_key">AIzaSyDdLHDsBWJbhOCJEIphNSJwh9i7UuzCa_Q</string>
    <string name="feels_like_27_c">Feels Like 27 C</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="temperature">Temperature</string>
    <string name="farahenite">F</string>
    <string name="celcius">C</string>
    <string name="time_format">Time Format</string>
    <string name="twenty_four">24</string>
    <string name="twelve">12</string>
    <string name="mm">mm</string>
    <string name="perception">Perception</string>
    <string name="inches">in</string>
    <string name="pressure">Pressure</string>
    <string name="system">System</string>
    <string name="date_format">Date Format</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="km_h">km/h</string>
    <string name="api">API</string>
    <string name="kmh">KM/H</string>
    <string name="mh">mh</string>
    <string name="millibar_type">milibar</string>
    <string name="MapView">Map view</string>
    <string name="longitude">longitude:</string>
    <string name="latitude">latitude:</string>


    <string-array name="navigation_titles_array">
        <item>@string/home</item>
        <item>@string/manage_location</item>
        <item>@string/MapView</item>
        <item>@string/settings</item>
    </string-array>
</resources>