<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
<RelativeLayout
    android:padding="@dimen/_12sdp"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/ic_snowflake"
        android:layout_centerVertical="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/temperature"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_toEndOf="@+id/imageView1"/>

    <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleTemperature"
        app:textToggleRight="@string/farahenite"
        app:textToggleLeft="@string/celcius"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>

    <RelativeLayout
        android:padding="@dimen/_12sdp"
        android:layout_gravity="center"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_24_hours"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/time_format"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/imageView2"/>

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleTimeFormat"
            app:textToggleRight="@string/twenty_four"
            app:textToggleLeft="@string/twelve"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:padding="@dimen/_12sdp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_calendar"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/date_format"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/imageView3"/>

        <TextView
            android:id="@+id/textViewDateFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:drawableEndCompat="@drawable/ic_next" />

    </RelativeLayout>

    <RelativeLayout
        android:padding="@dimen/_12sdp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_wind_turbine"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/wind_speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/imageView4"/>

        <TextView
            android:id="@+id/textViewWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/km_h"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:drawableEndCompat="@drawable/ic_next" />

    </RelativeLayout>

    <RelativeLayout
        android:padding="@dimen/_12sdp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_pressure"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/pressure"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/imageView5"/>

        <TextView
            android:id="@+id/textViewPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inches"
            android:gravity="center"
            android:drawablePadding="@dimen/_5sdp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:drawableEndCompat="@drawable/ic_next" />

    </RelativeLayout>

    <RelativeLayout
        android:padding="@dimen/_12sdp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_wind"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/perception"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/imageView6"/>

        <TextView
            android:id="@+id/textViewPerception"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mm"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:drawablePadding="@dimen/_5sdp"
            app:drawableEndCompat="@drawable/ic_next" />

    </RelativeLayout>



</LinearLayout>