<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgweather">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/UpperLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:id="@+id/imageViewWeather"
                    android:layout_width="@dimen/dp_180"
                    android:layout_height="@dimen/dp_180"
                    android:layout_marginTop="@dimen/_100sdp"
                    android:elevation="@dimen/_8sdp"
                    android:padding="@dimen/_16sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:id="@+id/textViewLastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:text="@string/last_update_july_31_11_00_am"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textViewCityAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_gps"
                    android:drawablePadding="@dimen/_4sdp"
                    android:gravity="center|start"
                    android:text="@string/bengalore"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewCityAddress"
                    android:layout_alignParentEnd="true"
                    android:gravity="center|start"
                    android:text="@string/_10_24_am"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textViewMaxMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewCityAddress"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_74sdp"
                    android:text="@string/_31_32_c"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textViewWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewMaxMin"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="32 C"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_36ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCityFeelsLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewWeather"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/feels_like_27_c"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textViewWeatherInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewCityFeelsLike"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textAlignment="textEnd"
                    android:layout_toEndOf="@+id/imageViewWeather"
                    android:text="Moderate Rain with thunderstorm"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textViewPreciption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewWeatherInfo"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="Preciption: 100%"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textViewPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewPreciption"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="Pressure: 1012"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textViewVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewPressure"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="Visibility: 2.0"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewVisibility"
                    android:gravity="top"
                    android:paddingBottom="@dimen/_12sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewCloudCover"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:gravity="start"
                            android:text="CLOUD COVER: 13"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/textViewUVIndex"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:gravity="end"
                            android:text="UV INDEX: "
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewHumidity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:gravity="start"
                            android:text="HUMIDITY: 66%"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/textViewSunRise"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:gravity="end"
                            android:text="SUN RISE: 6:00 AM"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewWind"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:gravity="start"
                            android:text="WIND: "
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/textViewSunSet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:gravity="end"
                            android:text="SUNSET: 6:30 PM "
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="#D9D6CF"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFiveDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>